<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">




        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/appbar_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include layout="@layout/activity_appbar_loggedout"/>

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">


                <EditText
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:width="300dp"
                    android:background="@drawable/login_edittext_border"
                    android:hint="@string/login_username"
                    android:gravity="center"
                    android:textColor="@color/greendark"
                    android:textColorHint="@color/greenlight"
                    android:inputType="text"
                    android:textSize="20sp"
                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:width="300dp"
                    android:background="@drawable/login_edittext_border"
                    android:hint="@string/login_password"
                    android:gravity="center"
                    android:textColor="@color/greendark"
                    android:textColorHint="@color/greenlight"
                    android:inputType="textPassword"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/username"
                    />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:width="300dp"
                    android:background="@drawable/login_edittext_border"
                    android:hint="@string/email_id"
                    android:gravity="center"
                    android:textColor="@color/greendark"
                    android:textColorHint="@color/greenlight"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/password"
                    />

                <EditText
                    android:id="@+id/phoneno"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:width="300dp"
                    android:background="@drawable/login_edittext_border"
                    android:hint="@string/phone_number"
                    android:gravity="center"
                    android:textColor="@color/greendark"
                    android:textColorHint="@color/greenlight"
                    android:inputType="phone"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/email"
                    />



                <Button
                    android:id="@+id/btn_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textAllCaps="false"
                    android:layout_below="@+id/phoneno"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/login_btn"
                    android:shadowColor="@color/greendark"
                    android:textColor="@color/white"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-condensed"
                    />




            </RelativeLayout>





            <Button
                android:id="@+id/btn_refer_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textAllCaps="false"
                android:background="@drawable/signup_btn"
                android:textColor="@color/white"
                android:text="Back To Login"
                />



        </RelativeLayout>












</androidx.constraintlayout.widget.ConstraintLayout>